Fix cart scroll lock by replacing independent overflow management with shared useScrollLock hook

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -171,14 +171,14 @@ article p,
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
+  overflow-x: clip;
   width: 100%;
   max-width: 100vw;
 }
 
 .main {
   flex: 1;
-  overflow-x: hidden;
+  overflow-x: clip;
   width: 100%;
   max-width: 100vw;
   padding-top: 64px;
